Fix select label spacing on RTL langauge

--- a/public_html/wp-content/themes/pattern-directory/css/components/_pattern-order-select.scss
+++ b/public_html/wp-content/themes/pattern-directory/css/components/_pattern-order-select.scss
@@ -9,4 +9,16 @@
 	select.components-select-control__input.components-select-control__input {
 		width: auto;
 	}
+
+	body.rtl & {
+		// Update the margin when using an RTL language, overrides a Gutenberg bug.
+		.components-input-control__container {
+
+			/*!rtl:ignore*/
+			margin-left: 0;
+
+			/*!rtl:ignore*/
+			margin-right: 8px;
+		}
+	}
 }
